Fixed the alert width and visibility timing.

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -32,7 +32,7 @@ li .glyphicon {
   left: 50%;
   top: 55px;
   z-index: 99;
-  width: 600px;
+  width: 60%;
 }
 
 .alert {
